add CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/stylesheet.css" rel"stylesheet" type="text/css" media="all">
+    <link href="css/stylesheet.css" rel="stylesheet" type="text/css" media="all">
     <title>Cupcake Shop</title>
   </head>
   <body>
     <img src="img/cupcake_logo.png" alt="The Cupcake Shop logo.">
 
-    <h1>Welcome to Cupcake Shop</h1>
+    <h1 class="flashy">Welcome to Cupcake Shop</h1>
     <h2>Home of delicious organic cupcakes!</h2>
     <img src="img/cupcake_shop_main.jpeg" alt="A photo of some cupcakes.">
 
-    <h3>Our cupcakes are hand-made of organic high quality ingredients. Get your favorite one!</h3>
+    <h3 class="flashy">Our cupcakes are hand-made of organic high quality ingredients. Get your favorite one!</h3>
     <p>Below you'll find a is a list of our cupcake flavors.</p>
 
     <ul>
@@ -21,7 +21,7 @@
       </li>
       <li>
         <img src="img/chocolate_spider_web.jpeg" alt="A photo of Chocolate Spider Web cupcake.">
-        <p>Chocolate Spider Web</p>
+        <p class="best">Chocolate Spider Web</p>
       </li>
       <li>
         <img src="img/cream_snow.jpeg" alt="A photo of Cream Snow cupcake.">
@@ -41,6 +41,6 @@
       </li>
     </ul>
 
-    <p>For more informations and orders please send us a mail to <a href="mailto:info@cupcakeshop.com">info@cupcakeshop.com</a> and we will get in contact with you as soon as possible!</p>
+    <p class="flashy">For more informations and orders please send us a mail to <a href="mailto:info@cupcakeshop.com">info@cupcakeshop.com</a> and we will get in contact with you as soon as possible!</p>
   </body>
 </html>
